# Pegasos

./: .gitignore  .gitmodules  CMakeLists.txt  Crazy.hpp  Pegasos.hpp  main.cpp
Common/: CMakeLists.txt
Common/include/PegasosCommon/: common.hpp
Common/src/: common.cpp
Renderer/: CMakeLists.txt  GLRenderer.hpp  PegasosRenderer.hpp  Renderer.hpp  RendererDefaults.cpp  VulkanGPipeline.hpp  VulkanMesh.cpp  VulkanMesh.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanRendererDevice.cpp  VulkanRendererDeviceQueuesFamilies.cpp  VulkanRendererInstance.cpp  VulkanRendererPresentation.cpp
Renderer/GLPipelinePlans/: CMakeLists.txt  GLFixedFunctions.cpp  GLShaderLoader.cpp  OpenGLGeneralPipeline.cpp
Renderer/OpenGL/: GLGPipeline.hpp  GLMesh.cpp  GLMesh.hpp  GLRenderer.cpp  GLRenderer.hpp  GLRendererPlan.cpp
Renderer/OpenGL/GLPipelinePlans/: CMakeLists.txt  GLFixedFunctions.cpp  GLShaderLoader.cpp  OpenGLGeneralPipeline.cpp
Renderer/Vulkan/: VulkanMesh.cpp  VulkanMesh.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanRendererDevice.cpp  VulkanRendererDeviceQueuesFamilies.cpp  VulkanRendererPresentation.cpp
Renderer/Vulkan/VulkanPipelinePlans/: FixedFunctions.cpp  ShadersLoader.cpp
Renderer/VulkanPipelinePlans/: CMakeLists.txt  FixedFunctions.cpp  PipelineCreator.cpp  PipelineLayout.cpp  RenderpassCreator.cpp  ShadersLoader.cpp  SubpassCreator.cpp
Shaders/: shader.frag  shader.vert
Window/: CMakeLists.txt  Window.hpp  WindowGLFW.cpp
opt/: CMakeLists.txt
opt/glad/: CMakeLists.txt
opt/glad/include/glad/: glad.h
opt/glad/src/: glad.c
