add_library(VulkanRenderer VulkanRenderer.cpp RendererDefaults.cpp VulkanRendererInstance.cpp VulkanRendererDevice.cpp VulkanRendererPresentation.cpp VulkanRendererDeviceQueuesFamilies.cpp VulkanMesh.cpp)

add_subdirectory(VulkanPipelinePlans)

target_link_libraries(VulkanRenderer glfw Vulkan::Vulkan glm::glm VulkanPipelinesPlans)